--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,38 +1,34 @@
 ---
-name: build
+name: Image build
 on:
-  push:
-    branches:
-    - main
+  workflow_call:
+    inputs:
+      checkov-output-format:
+        required: false
+        type: string
+        default: cli
+      checkov-dir:
+        required: false
+        type: string
+        default: .
   workflow_dispatch:
+
+env:
+  CHECKOV_OUTPUT_FORMAT: ${{ inputs.checkov-output-format }}
+  CHECKOV_DIR: ${{ inputs.checkov-dir }}
+
 jobs:
-  build:
-    name: Build
+  prepare:
+    name: Prepare
     runs-on: ubuntu-20.04
     container:
       image: ixxel/cd-toolbox:latest
     steps:
-    - name: Checkout code
+    - name: Clone code
       uses: actions/checkout@v3
+    - name: Checkov GitHub Action
+      uses: bridgecrewio/checkov-action@v12
+      with:
+        directory: '${CHECKOV_DIR}'
+        output_format: '${CHECKOV_OUTPUT_FORMAT}'
 
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: docker.io/ixxel/ci-toolbox:latest
-        format: table
-        vuln-type: os,library
-        severity: CRITICAL,HIGH
-      env:
-        TRIVY_USERNAME: ixxel
-        TRIVY_PASSWORD: 2794d8ea-0fa5-4039-8036-9bc85f3765af
-    - name: Security scan for docker image (Grype)
-      id: scan-image1
-      uses: ixxeL-actions/grype-scan@main
-      with:
-        image-ref: docker.io/ixxel/ci-toolbox:latest
-        transport: registry
-        fail-on: '""'
-        output: table
-        scope: AllLayers
-        template: '""'
-        verbose: ''
