--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -10,6 +10,7 @@ on:
     # Checkov
       artefact:
         required: true
+        type: string
       # checkov-dir:
       #   required: false
       #   type: string
