--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -49,7 +49,40 @@ on:
         type: string
       github-api-auth:
         required: false
+        type: boolean
+      file:
+        required: false
         type: string
+      build-arg:
+        required: false
+        type: string
+      target-dir:
+        required: false
+        type: string
+      single-snapshot:
+        required: false
+        type: boolean
+      new-run:
+        required: false
+        type: boolean
+      skip-unused-stages:
+        required: false
+        type: boolean
+      snapshot-mode:
+        required: false
+        type: string
+      no-push:
+        required: false
+        type: boolean
+      verbosity:
+        required: false
+        type: string
+      compressed-caching:
+        required: false
+        type: boolean
+
+
+
   workflow_dispatch:
 
 jobs:
@@ -67,22 +100,33 @@ jobs:
     #     directory: ${{ inputs.workingdir }}
     #     output_format: ${{ inputs.checkov-output-format }}
     # - name: Checkov scan
-    #   uses: ixxeL-actions/workflows/actions/checkov@main
+    #   uses: ixxeL-actions/workflows/.github/actions/checkov@main
     #   with:
-    #     workingdir: ${{ inputs.workingdir}}
-    #     artefact: ${{ inputs.artefact}}
-    #     compact: ${{ inputs.compact}}
-    #     quiet: ${{ inputs.quiet}}
-    #     no-guide: ${{ inputs.no-guide}}
-    #     format: ${{ inputs.format}}
-    #     threshold: ${{ inputs.threshold}}
-    #     soft-fail: ${{ inputs.soft-fail}}
-    #     gate: ${{ inputs.gate}}
+    #     workingdir: ${{ inputs.workingdir }}
+    #     artefact: ${{ inputs.artefact }}
+    #     compact: ${{ inputs.compact }}
+    #     quiet: ${{ inputs.quiet }}
+    #     no-guide: ${{ inputs.no-guide }}
+    #     format: ${{ inputs.format }}
+    #     threshold: ${{ inputs.threshold }}
+    #     soft-fail: ${{ inputs.soft-fail }}
+    #     gate: ${{ inputs.gate }}
     - name: Kaniko build
       uses: ixxeL-actions/workflows/.github/actions/kaniko@main
       with:
+        workingdir: ${{ inputs.workingdir }}
         img-name: ${{ inputs.img-name }}
         tag: ${{ inputs.tag }}
         github-api-rest-token: ${{ inputs.github-api-rest-token }}
         github-api-auth: ${{ inputs.github-api-auth }}
+        file: ${{ inputs.file }}
+        build-arg: ${{ inputs.build-arg }}
+        target-dir: ${{ inputs.target-dir }}
+        single-snapshot: ${{ inputs.single-snapshot }}
+        new-run: ${{ inputs.new-run }}
+        skip-unused-stages: ${{ inputs.skip-unused-stages }}
+        snapshot-mode: ${{ inputs.snapshot-mode }}
+        no-push: ${{ inputs.no-push }}
+        verbosity: ${{ inputs.verbosity }}
+        compressed-caching: ${{ inputs.compressed-caching }}
 
