--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -14,24 +14,31 @@ on:
         type: string
       compact:
         required: false
+        default: true
         type: string
       quiet:
         required: false
+        default: false
         type: string
       no-guide:
         required: false
+        default: false
         type: string
       format:
         required: false
+        default: cli
         type: string
       threshold:
         required: false
+        default: critical
         type: string
       soft-fail:
         required: false
+        default: true
         type: string
       gate:
         required: false
+        default: '50'
         type: string
       # Kaniko
       img-name:
@@ -103,18 +110,18 @@ jobs:
     #   with:
     #     directory: ${{ inputs.workingdir }}
     #     output_format: ${{ inputs.checkov-output-format }}
-    # - name: Checkov scan
-    #   uses: ixxeL-actions/workflows/.github/actions/checkov@main
-    #   with:
-    #     workingdir: ${{ inputs.workingdir }}
-    #     artefact: ${{ inputs.artefact }}
-    #     compact: ${{ inputs.compact }}
-    #     quiet: ${{ inputs.quiet }}
-    #     no-guide: ${{ inputs.no-guide }}
-    #     format: ${{ inputs.format }}
-    #     threshold: ${{ inputs.threshold }}
-    #     soft-fail: ${{ inputs.soft-fail }}
-    #     gate: ${{ inputs.gate }}
+    - name: Checkov scan
+      uses: ixxeL-actions/workflows/.github/actions/checkov@main
+      with:
+        workingdir: ${{ inputs.workingdir }}
+        artefact: ${{ inputs.artefact }}
+        compact: ${{ inputs.compact }}
+        quiet: ${{ inputs.quiet }}
+        no-guide: ${{ inputs.no-guide }}
+        format: ${{ inputs.format }}
+        threshold: ${{ inputs.threshold }}
+        soft-fail: ${{ inputs.soft-fail }}
+        gate: ${{ inputs.gate }}
     - name: Kaniko build
       uses: ixxeL-actions/workflows/.github/actions/kaniko@main
       with:
@@ -133,4 +140,3 @@ jobs:
         no-push: ${{ inputs.no-push }}
         verbosity: ${{ inputs.verbosity }}
         compressed-caching: ${{ inputs.compressed-caching }}
-
