--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -99,17 +99,13 @@ on:
 jobs:
   prepare:
     name: Prepare
+    timeout-minutes: 10
     runs-on: ubuntu-20.04
     container:
       image: ixxel/ci-toolbox:latest
     steps:
     - name: Clone code
       uses: actions/checkout@v3
-    # - name: Checkov GitHub Action
-    #   uses: bridgecrewio/checkov-action@v12
-    #   with:
-    #     directory: ${{ inputs.workingdir }}
-    #     output_format: ${{ inputs.checkov-output-format }}
     - name: Checkov scan
       uses: ixxeL-actions/workflows/.github/actions/checkov@main
       with:
@@ -124,6 +120,7 @@ jobs:
         gate: ${{ inputs.gate }}
   build:
     name: Build
+    timeout-minutes: 15
     runs-on: ubuntu-20.04
     container:
       image: ixxel/cd-toolbox:latest
