--- a/.github/workflows/container-img-builder.yaml
+++ b/.github/workflows/container-img-builder.yaml
@@ -45,7 +45,7 @@ on:
         required: true
         type: string
       tag:
-        required: true
+        required: false
         type: string
       github-api-rest-token:
         required: false
