--- a/.github/actions/helm-template/action.yaml
+++ b/.github/actions/helm-template/action.yaml
@@ -11,28 +11,53 @@ inputs:
     description: use strict mode
     required: false
     default: true
+  chart-name:
+    description: name of the chart
+    required: false
   values-file:
     description: name of the values.yaml file
     required: false
     default: values.yaml
+  add-repo:
+    description: weither or not to add a repo
+    required: false
+    default: false
+  repo-url:
+    description: url of the helm repo to add
+    required: false
   repo-name:
-    description: name of the values.yaml file
+    description: name of the helm repo to add
     required: false
     default: temp-repo
   repo-user:
-    description: name of the values.yaml file
+    description: user of the helm repo to add
     required: false
-    default: temp-repo
+  repo-pwd:
+    description: password of the helm repo to add
+    required: false
+  set:
+    description: argument to pass to helm chart as --set command
+    required: false
+  stdout-mode:
+    description: output template to stdout
+    required: false
+    default: true
+  display-mode:
+    description: display template result to stdout
+    required: false
+    default: true
+  output-dir:
+    description: output directory name for template file
+    required: false
+    default: helm-tpl-result
+  output-file:
+    description: output file name for template file
+    required: false
+    default: result.yaml
 outputs:
-  CHART_NAME:
-    description: chart name
-    value: ${{ steps.helm-lint.outputs.CHART_NAME }}
-  CHART_VERSION:
-    description: chart version
-    value: ${{ steps.helm-lint.outputs.CHART_VERSION }}
-  CHART_APP_VERSION:
-    description: chart appVersion
-    value: ${{ steps.helm-lint.outputs.CHART_APP_VERSION }}
+  TPL_CHART_YAML:
+    description: template file path
+    value: ${{ steps.helm-template.outputs.TPL_CHART_YAML }}
 
 runs:
   using: composite
@@ -44,61 +69,43 @@ runs:
       echo -e "${CYAN}[ INFO ] > Helm version.${BLANK}"
       helm version --short
 
-      if [[ ${ADD_REPO} = "true" ]]
+      if [[ ${{ inputs.add-repo }} = true ]]
       then
-        echo -e "${YELLOW}[ EXECUTING ] > Adding repo named ${{ inputs.repo-name }} from ${HELM_REPO_URL}.${BLANK}"
-        helm repo add ${{ inputs.repo-name }} ${HELM_REPO_URL} --force-update \
+        echo -e "${YELLOW}[ EXECUTING ] > Adding repo named ${{ inputs.repo-name }} from ${{ inputs.repo-url }}.${BLANK}"
+        helm repo add ${{ inputs.repo-name }} ${{ inputs.repo-url }} --force-update \
                                                         --pass-credentials \
-                                                        --username=${HELM_REPO_USER} \
-                                                        --password=${HELM_REPO_PWD} \
+                                                        --username=${{ inputs.repo-user }} \
+                                                        --password=${{ inputs.repo-pwd }} \
                                                         --insecure-skip-tls-verify
         if [[ $? = 0 ]]
         then
           echo -e "${GREEN}[ SUCCESS ] > Helm repo added successfully !${BLANK}"
-          WORKINGDIR=${{ inputs.repo-name }}/${CHART_NAME}
+          WORKINGDIR=${{ inputs.repo-name }}/${{ inputs.chart-name }}
+          CHART_NAME=${{ inputs.chart-name }}
         else
           echo -e "${RED}[ ERROR ] > Helm repo failed to be added.${BLANK}"
           exit 1
         fi
+      elif [[ ${{ inputs.add-repo }} = false ]]
+      then
+        if [[ -f ${{ inputs.workingdir }}/Chart.yaml ]]
+        then
+          echo -e "${CYAN}[ INFO ] > Chart.yaml file detected.${BLANK}"
+          yq e ${{ inputs.workingdir }}/Chart.yaml -C
+          CHART_NAME=$(yq e '.name' ${{ inputs.workingdir }}/Chart.yaml)
+          CHART_VERSION=$(yq e '.version' ${{ inputs.workingdir }}/Chart.yaml)
+          CHART_APP_VERSION=$(yq e '.appVersion' ${{ inputs.workingdir }}/Chart.yaml)
+          echo -e "${CYAN}[ INFO ] > The chart [[ ${YELLOW}${CHART_NAME}${CYAN} ]] has version --> [[ ${YELLOW}${CHART_VERSION}${CYAN} ]] and appVersion --> [[ ${YELLOW}${CHART_APP_VERSION}${CYAN} ]]${BLANK}"
+          WORKINGDIR=${{ inputs.workingdir }}
+        else
+          echo -e "${PURPLE}[ WARNING ] > Chart.yaml file NOT detected.${BLANK}"
+          exit 1
+        fi
       fi
 
-
-      echo -e "${YELLOW}[ EXECUTING ] > Checking helm chart ${{ inputs.workingdir }}.${BLANK}"
-      if [[ -d ${{ inputs.workingdir }} ]]
+      if [ "${{ inputs.set }}" ]
       then
-        echo -e "${GREEN}[ CHECK SUCCESS ] > Directory exists, proceeding linting.${BLANK}"
-      else
-        echo -e "${RED}[ CHECK ERROR ] > Directory doesn't exist, canceling linting.${BLANK}"
-        exit 1
-      fi
-      if [[ -f ${{ inputs.workingdir }}/Chart.yaml ]]
-      then
-        echo -e "${CYAN}[ INFO ] > Chart.yaml file detected. Here is the file${BLANK}"
-        yq e ${{ inputs.workingdir }}/Chart.yaml -C
-        CHART_NAME=$(yq e '.name' ${{ inputs.workingdir }}/Chart.yaml)
-        CHART_VERSION=$(yq e '.version' ${{ inputs.workingdir }}/Chart.yaml)
-        CHART_APP_VERSION=$(yq e '.appVersion' ${{ inputs.workingdir }}/Chart.yaml)
-        echo -e "${CYAN}[ INFO ] > The chart [[ ${YELLOW}${CHART_NAME}${CYAN} ]] has version --> [[ ${YELLOW}${CHART_VERSION}${CYAN} ]] and appVersion --> [[ ${YELLOW}${CHART_APP_VERSION}${CYAN} ]]${BLANK}"
-      else
-        echo -e "${PURPLE}[ WARNING ] > Chart.yaml file NOT detected.${BLANK}"
-      fi
-      echo -e "${YELLOW}[ EXECUTING ] > CHecking Helm linting on chart ${CHART_NAME}.${BLANK}"
-      helm lint ${{ inputs.workingdir }} --with-subcharts \
-                              --values=${{ inputs.workingdir }}/${{ inputs.values-file }} \
-                              --strict=${{ inputs.strict }}
-      if [[ $? = 0 ]]
-      then
-        echo -e "${GREEN}[ CHECK SUCCESS ] > Helm Lint succeeded without any error.${BLANK}"
-        echo "CHART_NAME=$CHART_NAME" >> $GITHUB_OUTPUT
-        echo "CHART_VERSION=$CHART_VERSION" >> $GITHUB_OUTPUT
-        echo "CHART_APP_VERSION=$CHART_APP_VERSION" >> $GITHUB_OUTPUT
-      else
-        echo -e "${PURPLE}[ CHECK ERROR ] > Helm Lint didn't succeed, please review your helm chart.${BLANK}"
-        exit 1
-      fi
-
-      if [ "${SET}" ]
-      then
+        SET=${{ inputs.set }}
         [[ ! "$SET" =~ ^\|.+ ]] || SET="${SET:1}"
         full_str=${SET//|/ --set }
         SETTINGS="$SETTINGS --set $full_str"
@@ -106,37 +113,27 @@ runs:
         echo $SETTINGS
       fi
 
-      if [[ ${ADD_REPO} = "false" ]]
-      then
-        if [[ -f ${WORKINGDIR}/Chart.yaml ]]
-        then
-          echo -e "${CYAN}[ INFO ] > Chart.yaml file detected.${BLANK}"
-          echo -e "${CYAN}[ INFO ] > The chart [[ ${YELLOW}${CHART_NAME}${CYAN} ]] has version --> [[ ${YELLOW}${CHART_VERSION}${CYAN} ]] and appVersion --> [[ ${YELLOW}${CHART_APP_VERSION}${CYAN} ]]${BLANK}"
-        else
-          echo -e "${PURPLE}[ WARNING ] > Chart.yaml file NOT detected.${BLANK}"
-        fi
-      fi
-
       echo -e "${YELLOW}[ EXECUTING ] > Executing helm chart ${CHART_NAME} templating.${BLANK}"
-      if [[ ! -d ${OUTPUT_DIRECTORY} ]]; then mkdir -p ${OUTPUT_DIRECTORY}; fi
-      if [[ ${STDOUT_MODE} = "true" ]]
+      VALUES_FILE=${WORKINGDIR}/${{ inputs.values-file }}
+      if [[ ! -d ${{ inputs.output-dir }} ]]; then mkdir -p ${{ inputs.output-dir }}; fi
+      if [[ ${{ inputs.stdout-mode }} = true ]]
       then
-        helm template ${CHART_NAME} ${WORKINGDIR} --values="${VALUES_FILE}" ${SETTINGS} > ${OUTPUT_DIRECTORY}/${OUTPUT_FILE}
-      elif [[ ${STDOUT_MODE} = "false" ]]
+        helm template ${CHART_NAME} ${WORKINGDIR} --values="${VALUES_FILE}" ${SETTINGS} > ${{ inputs.output-dir }}/${{ inputs.output-file }}
+      elif [[ ${{ inputs.stdout-mode }} = "false" ]]
       then
-        helm template ${CHART_NAME} ${WORKINGDIR} --values="${VALUES_FILE}" ${SETTINGS} --output-dir ${OUTPUT_DIRECTORY}
+        helm template ${CHART_NAME} ${WORKINGDIR} --values="${VALUES_FILE}" ${SETTINGS} --output-dir ${{ inputs.output-dir }}
       fi
 
       if [[ $? = 0 ]]
       then
-        if [[ ${STDOUT_MODE} = "true" ]]
+        if [[ ${{ inputs.stdout-mode }} = true ]]
         then
-          TPL_CHART_YAML=${OUTPUT_DIRECTORY}/${OUTPUT_FILE}
-          echo "TPL_CHART_YAML=${TPL_CHART_YAML}" >> helm-template.env
-          if [[ "${DISPLAY}" = "true" ]]
+          TPL_CHART_YAML=${{ inputs.output-dir }}/${{ inputs.output-file }}
+          echo "TPL_CHART_YAML=$TPL_CHART_YAML" >> $GITHUB_OUTPUT
+          if [[ "${{ inputs.display-mode }}" = true ]]
           then
             echo -e "${CYAN}[ INFO ] > Displaying templated result.${BLANK}"
-            yq e -C ${OUTPUT_DIRECTORY}/${OUTPUT_FILE}
+            yq e -C ${{ inputs.output-dir }}/${{ inputs.output-file }}
           fi
         fi
         echo -e "${GREEN}[ CHECK SUCCESS ] > Helm templating succeeded without any error.${BLANK}"
@@ -144,7 +141,6 @@ runs:
         echo -e "${RED}[ CHECK ERROR ] > Helm templating didn't succeed !${BLANK}"
         exit 1
       fi
-
     shell: bash
     env:
       RED: \033[1;31m
