--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -17,6 +17,7 @@ on:
       chart-name:
         description: name of the chart
         required: false
+        type: string
       values-file:
         description: name of the values.yaml file
         required: false
@@ -95,7 +96,7 @@ jobs:
     - name: Clone code
       id: clone
       uses: actions/checkout@v3
-    - name: Helm linting
+    - name: Helm templating
       uses: ixxeL-actions/workflows/.github/actions/helm-template@main
       with:
         workingdir: ${{ inputs.workingdir }}
