--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -15,6 +15,16 @@ on:
         required: false
         default: ixxel/ci-toolbox:v1.5.0
         type: string
+      template-repo:
+        description: repository of the ci/cd template to use
+        required: false
+        default: ixxeL-actions/workflows/.github/actions
+        type: string
+      template-ref:
+        description: branch or tag of the ci/cd template to use
+        required: false
+        default: main
+        type: string
     # helm unit tests
       with-subcharts:
         description: include subcharts
@@ -99,7 +109,7 @@ jobs:
     - name: Clone code
       uses: actions/checkout@v3
     - name: Helm linting
-      uses: ixxeL-actions/workflows/.github/actions/helm-lint@main
+      uses: ${{ inputs.template-repo }}/helm-lint@${{ inputs.template-ref }}
       with:
         workingdir: ${{ inputs.workingdir }}
   helm-unittest:
@@ -112,7 +122,7 @@ jobs:
     - name: Clone code
       uses: actions/checkout@v3
     - name: Helm unit testing
-      uses: ixxeL-actions/workflows/.github/actions/helm-unittest@main
+      uses: ${{ inputs.template-repo }}/helm-unittest@${{ inputs.template-ref }}
       with:
         workingdir: ${{ inputs.workingdir }}
         with-subcharts: ${{ inputs.with-subcharts }}
@@ -128,7 +138,7 @@ jobs:
       id: clone
       uses: actions/checkout@v3
     - name: Helm templating
-      uses: ixxeL-actions/workflows/.github/actions/helm-template@main
+      uses: ${{ inputs.template-repo }}/helm-template@${{ inputs.template-ref }}
       with:
         workingdir: ${{ inputs.workingdir }}
         strict: ${{ inputs.strict }}
