trigger template variables ref3

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
   rev: v4.4.0
   hooks:
   - id: check-yaml
-    exclude: ^pipelines/delivery-full.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
+    exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.4.0
   hooks:
@@ -20,12 +20,13 @@ repos:
   hooks:
   - id: yamllint
     args: [--config-file, .yamllint-cfg.yaml]
+    exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
 - repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
   rev: 0.2.2
   hooks:
   - id: yamlfmt
     args: [--mapping, '2', --sequence, '2', --offset, '0', --width, '600']
-    exclude: ^pipelines/delivery-full.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
+    exclude: ^.github/workflows/helm-build.yaml$|^pipelines/helm-chart-pipeline-remote.yaml$
 - repo: https://github.com/hadolint/hadolint
   rev: v2.12.1-beta
   hooks:
