--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -13,7 +13,7 @@ on:
       ci-image:
         description: Docker image used for CI jobs
         required: false
-        default: ixxel/ci-toolbox:v1.5.0
+        default: ixxel/ci-toolbox:latest
         type: string
       template-repo:
         description: repository of the ci/cd template to use
