--- a/.github/actions/helm-unittest/action.yaml
+++ b/.github/actions/helm-unittest/action.yaml
@@ -45,6 +45,7 @@ runs:
       helm version --short
       echo -e "${CYAN}[ INFO ] > Displaying plugins list.${BLANK}"
       helm plugin list
+      echo "HELM_PLUGINS path --> $HELM_PLUGINS"
 
       echo -e "${YELLOW}[ EXECUTING ] > Checking helm chart ${{ inputs.workingdir }}.${BLANK}"
       if [[ -d ${{ inputs.workingdir }} ]]
